* Limestone chance mechanisms changed, instead of only ever having a possiblity to generate once per chunk, you now define how many times it will try to find a place it can generate
* Rennamed bait.xml to sifter.xml (to force the changes, otherwise some of the existing items would have terrible values)
* Autodictionary config options to use whitelist instead of blacklist(blacklist is default)

== Mariculture 1.1.4e ==
* Fixed NPE when player becomes null when fishing
* Can melt Raw Fish for Fish Oil ;)

== Mariculture 1.1.4d for Minecraft v1.6.X==
* Fixed insane tick handler usage for 'render updates' that weren't even doing anything
* Disabled Smoked Salmon for now

== Mariculture 1.1.4c for Minecraft v1.6.X==
* Hopefully fixed the last of the TE Fluiduct Crashes (Quick fix so may have issues in some cases: Proper fix will come with 1.2)
* Pressure Vessel Base Storage increased to be the same as two BC tanks, aka 32 buckets

== Mariculture 1.1.4b for Minecraft v1.6.X==
* Fixed Iron Wheel Recipe for those without certain mods
* Added in the textures that I forgot for some tools that can have the Pearl Modifier

== Mariculture 1.1.4a for Minecraft v1.6.X==
* Fixed TE Fluiduct Interaction, in places, may still be crashes somewhere
* Iron Wheels are used at twice the speed in a sluice as before
* lampsOn/Rutile/water ravine config fixes

== Mariculture 1.1.4 for Minecraft v1.6.X==
* Added Pearl Modifier for Tinkers tools > Adds Aqua Affinity (Pearl Brick recipe now only gives one... but you can uncraft them).
* Reconfigured Configs (now have a folder for my configs), adding fluids and bait should now be more user friendly too
* Changed Mechanized Sponge recipe to use Water Droplets instead of Aquatic